# typestrict

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/must_annotate/: __init__.py  __main__.py  checker.py  cli.py  config.py  errors.py
src/must_annotate/formatters/: __init__.py  base.py  json.py  text.py
src/must_annotate/rules/: __init__.py  base.py  classes.py  functions.py  loops.py  variables.py
src/typeforce/: __init__.py  __main__.py  checker.py  cli.py  config.py  errors.py
src/typeforce/formatters/: __init__.py  base.py  json.py  text.py
src/typeforce/rules/: __init__.py  base.py  classes.py  functions.py  loops.py  variables.py
src/typestrict/: __init__.py  __main__.py  checker.py  cli.py  config.py  errors.py
src/typestrict/formatters/: __init__.py  base.py  json.py  text.py
src/typestrict/rules/: __init__.py  base.py  classes.py  functions.py  loops.py  variables.py
tests/: conftest.py  test_classes.py  test_cli.py  test_config.py  test_functions.py  test_loops.py  test_variables.py
tests/fixtures/: classes_fail.py  classes_pass.py  functions_fail.py  functions_pass.py  variables_fail.py  variables_pass.py
