[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "must-annotate"
version = "0.1.1"
description = "Static analysis tool that enforces type annotation presence in Python code"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["type-annotations", "static-analysis", "linting", "mypy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[project.scripts]
must-annotate = "must_annotate.cli:main"

[project.urls]
Homepage = "https://github.com/PitRella/must-annotate"
Repository = "https://github.com/PitRella/must-annotate"
Issues = "https://github.com/PitRella/must-annotate/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/must_annotate"]

[tool.must-annotate]
exclude = ["tests/", "migrations/", "conftest.py"]
ignore = ["TF005"]
per_file_ignores = {}
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
packages = ["must_annotate"]
